# InfoExchange

./: README.md
andy/: README.md
andy/ROS/catkin_ws/: README.md
andy/ROS/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
andy/ROS/catkin_ws/devel/include/beginner_turtorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
andy/ROS/catkin_ws/devel/include/opencvtest/: image.h
andy/ROS/catkin_ws/devel/lib/beginner_turtorials/: add_two_ints_client  add_two_ints_server  listener  talker
andy/ROS/catkin_ws/devel/lib/opencvtest/: imagereader  imageshow  imagetag
andy/ROS/catkin_ws/devel/lib/pkgconfig/: beginner_turtorials.pc  opencvtest.pc
andy/ROS/catkin_ws/src/beginner_turtorials/: CMakeLists.txt  package.xml
andy/ROS/catkin_ws/src/beginner_turtorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
andy/ROS/catkin_ws/src/opencvtest/: CMakeLists.txt  package.xml
andy/ROS/catkin_ws/src/opencvtest/msg/: image.msg
andy/ROS/catkin_ws/src/opencvtest/src/: imagereader.cpp  imagetag.cpp
andy/obstacle_avoid/: readme.md
andy/obstacle_avoid/src/robot_follow/: CMakeLists.txt  package.xml
andy/obstacle_avoid/src/robot_follow/include/turtlebot3_gazebo/: turtlebot3_depth.h
andy/obstacle_avoid/src/robot_follow/launch/: depth_turtlebot3_world.launch
andy/obstacle_avoid/src/robot_follow/src/: .follow.cpp.swp  follow.cpp
andy/obstacle_avoid/src/turtlebot3_description/urdf/: depth_turtlebot3_burger.gazebo.xacro  fake_turtlebot3_burger.gazebo.xacro  fake_turtlebot3_burger.urdf.xacro  turtlebot3_burger_2.urdf.xacro
andy/pairbot/: README.md  README_Alice.md  TODO.md  move_cmd.txt  readme.md
andy/pairbot/src/pairbot/: .gitignore  controller_list.txt
andy/pairbot/src/pairbot/pb_control/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
andy/pairbot/src/pairbot/pb_control/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
andy/pairbot/src/pairbot/pb_control/config/: pb_control.yaml
andy/pairbot/src/pairbot/pb_control/gtest/: CTestTestfile.cmake  Makefile
andy/pairbot/src/pairbot/pb_description/: CMakeLists.txt  package.xml
andy/pairbot/src/pairbot/pb_gazebo/: CMakeLists.txt  package.xml
andy/pairbot/src/pairbot/pb_teleop/: CMakeLists.txt  package.xml
andy/pairbot/src/robot_follow/: CMakeLists.txt
andy/pairbot/src/robot_follow/launch/: pairbot_chasing.launch
andy/pairbot/src/robot_follow/src/: follow.cpp  run.cpp
andy/pairbot/src/turtlebot3_description/urdf/: 1_depth_turtlebot3_burger.gazebo.xacro  depth_turtlebot3_burger.gazebo.xacro
andy/pairbot/src/zed_sim_package/: CMakeLists.txt  package.xml
andy/pairbot/src/zed_sim_package/mesh/: zed_body.stl
andy/pairbot/src/zed_sim_package/urdf/: zed_sim.gazebo.xacro  zed_sim.urdf.xacro
andy/turtlebot3_rviz/: README.md
andy/turtlebot3_rviz/catkin_tb3/: avoid_obstacle_note.md  turtlebot3_gazebo note.md  turtlebot3_note.md
edward/doc/: DRL-DQN.ipynb
(+83 files in other folders)
