<?xml version="1.0"?>
<package format="2">
  <name>robot_follow</name>
  <version>0.0.0</version>
  <description>The robot_follow package</description>


  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>cv_bridge</depend>
  <exec_depend>gazebo</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
